--- a/app/views/playlists/index.html.haml
+++ b/app/views/playlists/index.html.haml
@@ -1,14 +1,16 @@
-%h1 Listing Playlists
+= link_to "Sign in with Facebook", "/auth/facebook"
 
-%table
-  %tr
-    %th Link
-    %th Time Added
-    %th Added By
-  = @playlists
-  - @hoc.each do |item|
-    %tr
-      %td= link_to item['link'], item['link']
-      %td= item['created_time']
-      %td= item['from']['name']
-= @array
+-#%h1 Listing Playlists
+
+-#%table
+  -#%tr
+    -#%th Link
+    -#%th Time Added
+    -#%th Added By
+  -#= @playlists
+  -#- @hoc.each do |item|
+    -#%tr
+      -#%td= link_to item['link'], item['link']
+      -#%td= item['created_time']
+      -#%td= item['from']['name']
+-#= @array
