--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,9 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
     %body
+      - if flash[:notice]
+        %p.flash
+          = flash[:notice]
       - if current_user
         = "Signed in as #{current_user.name}"
         = link_to "Sign out", signout_path
