tracks page added

--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -1,4 +1,3 @@
 %p
-  = link_to "HoC playlist", playlists_path(group_id: '179298008840024')
-- if Rails.env.development?
-  = link_to "TestGroup Playlist", playlists_path(group_id: '345339485542329')
+  - if current_user
+    = link_to "Tracks", tracks_path
