--- a/app/views/tracks/index.html.haml
+++ b/app/views/tracks/index.html.haml
@@ -1,8 +1,13 @@
-%p
+%table
   - @tracks.each_with_index do |track, i|
-    %p
-      = "#{i + 1}. "
-      = link_to("#{track.url}", track.url)
-      = (track.posted_on.localtime).strftime("Posted on %B %d at %-l:%M %p")
-      - name = track.user.name.split(" ")
-      = "by #{name.first} #{name.last[0]}."
+    %tr
+      %td
+        = "#{i + 1}. "
+      %td
+        = link_to(truncate(track.title, length: 57) || "ID", track.url)
+      %td
+        = (track.posted_on.localtime).strftime("Posted on %B %d at %-l:%M %p")
+      %td
+        - name = track.user.name.split(" ")
+      %td
+        = "by #{name.first} #{name.last[0]}."
