--- a/app/views/tracks/index.html.haml
+++ b/app/views/tracks/index.html.haml
@@ -6,7 +6,7 @@
       %td
         = link_to(truncate(track.title, length: 57) || "ID", track.url)
       %td
-        = (track.posted_on.localtime).strftime("Posted on %B %d at %-l:%M %p")
+        = (track.posted_on - 6.hours).strftime("Posted on %B %d at %-l:%M %p")
       %td
         - name = track.user.name.split(" ")
       %td
