--- a/app/views/tracks/index.html.haml
+++ b/app/views/tracks/index.html.haml
@@ -4,7 +4,7 @@
       %td
         = "#{i + 1}. "
       %td
-        = link_to(truncate(track.title, length: 57) || "ID", track.url)
+        = link_to(truncate(track.title, length: 57) || "ID", track.url, target: '_blank')
       %td
         = (track.posted_on - 6.hours).strftime("Posted on %B %d at %-l:%M %p")
       %td
