--- a/app/views/tracks/index.html.haml
+++ b/app/views/tracks/index.html.haml
@@ -1,4 +1,9 @@
 %table
+  %tr
+    %th
+    %th Track Title
+    %th Posted on
+    %th Posted by
   - @tracks.each_with_index do |track, i|
     %tr
       %td
@@ -6,7 +11,7 @@
       %td
         = link_to(truncate(track.title, length: 57) || "ID", track.url, target: '_blank')
       %td
-        = (track.posted_on - 6.hours).strftime("Posted on %B %d at %-l:%M %p")
+        = (track.posted_on - 6.hours).strftime("%B %d at %-l:%M %p")
       %td
         by
         = link_to "#{track.user.first_name} #{track.user.last_initial}.", user_tracks_path(track.user)
