--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,7 +13,7 @@
       - if current_user
         = "Signed in as #{current_user.name}"
         = button_to "Sign out", signout_path, class: 'button', method: 'get'
-      - else
+      -# else
         = button_to "Sign in with Facebook", "/auth/facebook", class: 'button', method: 'get'
       = render 'layouts/google_analytics' if Rails.env.production?
     %div.content
