only ever use the full name so combining name methods

--- a/app/views/tracks/user.html.haml
+++ b/app/views/tracks/user.html.haml
@@ -1,10 +1,6 @@
 %h2.text
   Tracks posted by
-  = "#{@user.first_name} #{@user.last_initial}."
-
-%h2.text
-  Back to
-  = link_to "all tracks", tracks_path
+  = "#{@user.full_name}"
 
 %p= paginate @tracks
 
