--- a/app/views/tracks/index.html.haml
+++ b/app/views/tracks/index.html.haml
@@ -15,4 +15,4 @@
         = (track.posted_on - 6.hours).strftime("%B %d at %-l:%M %p")
       %td
         by
-        = link_to "#{track.user.first_name} #{track.user.last_initial}.", user_tracks_path(track.user)
+        = link_to "#{track.user.full_name}", user_tracks_path(track.user)
