--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,10 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
     %body
-      = image_tag "house_of_chi.jpg", width: 600, class: 'banner'
+      #search
+        = render 'tracks/search'
+      .banner
+        = link_to image_tag("house_of_chi.jpg", width: 400), root_path
       - if flash[:notice]
         %p.flash
           = flash[:notice]
