--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -1,10 +1,9 @@
-%p
-  = link_to "All Tracks", tracks_path
-  = render 'tracks/search'
 #leaderboard
   %h2 Leaderboard
   - @leaders.each do |leader|
     %li
       = link_to leader.full_name, user_tracks_path(leader)
       = "- #{leader.track_count} tracks"
+#alltracks
+  = button_to "All Tracks", tracks_path, class: 'button', method: :get
 
